# SWIFLO

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  package.json
apps/api/prisma/: schema.prisma
apps/api/scripts/: create-swi-token.ts  setup-pool.ts  update-mto-authority.ts
apps/api/src/: index.ts
apps/mobile/: .env.example  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  confirm.tsx  index.tsx  login.tsx  send.tsx
apps/mobile/components/: AmountInput.tsx  RateComparison.tsx  RecipientInput.tsx  SuccessReceipt.tsx  TransactionStatus.tsx  TransferCard.tsx
apps/mobile/lib/: api.ts  format.ts  privyWallet.ts  transfer.ts
apps/mto-mock/: package.json
apps/mto-mock/src/: esewa-mock.ts  index.ts  solana.ts
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/components/: FaucetButton.tsx  LiveStats.tsx  Navbar.tsx  SavingsCalculator.tsx  SidebarContext.tsx  WalletSidebar.tsx
apps/web/idl/: swiflo_liquidity_vault.json  swiflo_rate_oracle.json  (+1 more)
onchain/swiflo_onchain/: Anchor.toml  package-lock.json
onchain/swiflo_onchain/programs/swiflo-rate-oracle/: Cargo.toml
onchain/swiflo_onchain/programs/swiflo-rate-oracle/src/: lib.rs
programs/: Anchor.toml  Cargo.toml
programs/swiflo-liquidity-vault/: Cargo.toml
programs/swiflo-rate-oracle/: Cargo.toml
programs/swiflo-remittance-pool/: Cargo.toml
(+41 files in other folders)
